--- a/paper.html
+++ b/paper.html
@@ -52,7 +52,7 @@
 					</ul>
 				</div>
 				
-				<div>
+				<div id="paper_list">
 					<span>2019</span>
 					<ul>
 						<li><p>[1]Yangkang Chen, Weilin Huang, Dong Zhang, Wei Chen*. An open-source Matlab code package for improved rank-reduction 3D seismic data denoising and reconstruction. Computers & Geosciences, 2016, 95: 59-66. (SCI检索，*通讯作者)</p></li>
